array.island.Island.scala.error
Erreur de compilation :
Island:11: error: identifier expected but '(' found.
        while(num.(mer2)!=0 && mer2<num.length -1){
                  ^